V2.1/后端文档/后端开发文档.md
# ***“一个月完成项目！”详细设计***



| 修订日期   | 版本              | 修订内容                                 | 修订人      | 审核人 |
| ---------- | ----------------- | ---------------------------------------- | ----------- | ------ |
| 2019/11/22 | v0.01(旧版本称呼) | 数据库设计+基础功能                      | 刘若尘      | zzj    |
| 2019/11/28 | v1.0              | 数据库修改+功能完善                      | 刘若尘      | zzj    |
| 2019/1/19  | v1.1              | 数据库定义分离+功能增加                  | 刘若尘，zzj | zzj    |
| 2019/3/2   | v2.1              | 增加用户数据库定义+功能增加;统计模块修改 | 刘若尘      |        |



[TOC]



## 1数据库设计



### 1.1Django内数据库定义

```python
class Jobinfo(models.Model):
    jobName = models.CharField(db_column='jobName', max_length=250)  # Field name made lowercase.
    company = models.CharField(max_length=250)
    address = models.CharField(max_length=250)
    salary = models.CharField(max_length=250)
    date = models.CharField(max_length=250)
    exp = models.CharField(max_length=250)
    edu = models.CharField(max_length=250)
    offerNumber = models.CharField(db_column='offerNumber', max_length=250)  # Field name made lowercase.
    jobInfo = models.TextField(db_column='jobInfo')  # Field name made lowercase.
    companyType = models.CharField(db_column='companyType', max_length=250)  # Field name made lowercase.
    staffNumber = models.CharField(db_column='staffNumber', max_length=250)  # Field name made lowercase.
    companyOrientation = models.CharField(db_column='companyOrientation', max_length=250)  # Field name made lowercase.
    jobURL = models.CharField(db_column='jobURL', max_length=255)  # Field name made lowercase.
    unifyName = models.CharField(db_column='unifyName', max_length=255, blank=True, null=True)  # Field name made lowercase.

    class Meta:
        db_table = 'jobinfo'
        unique_together = (('jobName', 'company', 'date'),)
   


class User(models.Model):
    username = models.CharField(max_length=16,primary_key=True)
    password = models.CharField(max_length=32)
    email = models.EmailField(default='123@dd.com')
    phone = models.IntegerField(null=True)
    profile = models.TextField(max_length=500,null=True)

    class Meta:
        db_table='user'

```



## 2模块设计

### 2.1Views

### *1.get_jobinfo(request,jobName,page)*

  + **Function:**根据提交的表单职业种类信息,返回对应的职业记录信息和对应的分页数.

  + **Input:**

       ​		**1.** **jobName(str):**职业名

       ​		 {"大数据开发","大数据运维","大数据架构师","大数据测试","大数据分析"}

       ​		**2.page(int):** 职业记录的分页号

  + **Output:** 

    			​			**1.jobinfo(<class 'django.db.models.query.QuerySet'>):**返回该职业名称对应的所有职业offer信息.

       ​			**2.offers(int):**offer个数.
       
       ​			**3.jobName:**职业名
       
       ​			**4.total_pages:**总页数

   

### *2.get_group_statistics(request)*

 - **Function:**返回不同公司种类下的最小,平均,最大薪资.

 - **Input:**前端表单提交的数据库字段.

      ​		 {"jobName","edu","exp","companyType","address","companyOrientation"}

 - **Output:**

   			​			**1.data(list):**返回不同字段分组的最低,平均,最高工资。第一个元素作为echarts的标签使用.

      ```python
	example:[['product', 'min', 'avg', 'max'],['上市公司', 1.86111111, 2.40555556, 2.95],['事业单位', 1.  , 1.25,1.5 ]
      ...]
	```

### 3.detail(request)

+ **Function:**返回单筛选条件下的offer数量，双筛选条件下的offer数量，一周内的offer数量，不同领域的offer数量

+ **Input:**无

+ **Output：**

  ​			{"lab":lab,"val":val,"lab2":lab2,"val2":val2,"ofs_w":ofs_w,"cmp_o":cmp_o,'jobinfo_n':jobinfo_n}

  ​			1.lab(list):单筛选的结果标签

  ​			2.val(list):单筛选的结果值

  ​			3.lab2(list):双筛选的结果标签

  ​			4.val2(list):双筛选的结果值

  ​			5.ofs_w(list):一周的offer数量，包括2个list，一个是标签，一个是值

  ​			6.cmp_o(list):公司领域offer，包括2个list，一个是标签，一个是值

  ​			7.jobinfo_n:所有offer的数量

### 4.get_groupByOneFeature(request)

+ **Function:**接受ajax的请求值，调用groupByOneFeature，并返回对应值

+ **Input:**ajax发来的值

+ **Output：**

  ​			{"result":result,'jobinfo_n':jobinfo_n}

  ​			Json格式

  ​			1.result(list):单筛选的结果标签，包括2个list，一个是标签，一个是值

  ​			2.jobinfo_n:所有offer的数量

### 5.get_groupByTwoFeatures(request)

+ **Function:**接受ajax的请求值，调用groupByTwoFeature，并返回对应值

+ **Input:**ajax发来的值

+ **Output：**

  ​			{"result":result,'jobinfo_n':jobinfo_n}

  ​			Json格式

  ​			1.result(list):单筛选的结果标签，包括2个list，一个是标签，一个是值

  ​			2.jobinfo_n:所有offer的数量

### 6.login_auth(func,*args,**kwargs)

+ **Function**:一个检验用户是否登入的装饰器

+ **Input**：需要进行用户登入检验的模块

  ​			**func**（函数）

+ **Output**:

  ​			response(object):模块的输出

  ​			or

  ​			HttpResponse('请先登入')

### 7.page_not_found(request)

 + **Function**:处理未知域名，可以使得用户返回主页面

 + **Input**:无

 + **Output**:

   ​			404页面

### 8.login(request):

 + **Function**:用户登入

 + **Input**：用户从前端传来的表单

 + **Output**：

   ​			session记录2个变量 ’is_login', 'username'

   ​			并返回主页面

### 9.logout(request):

 + **Fucntion**:注销登入

 + **Input**:无

 + **Output**:

   ​			销毁session的记录

### 10.profile(request):

 + **Function**:修改用户的个人信息

 + **Input**：用户前端传来的表单

 + **Output**：

   ​			修改数据库内的内容。

**11.dashboard(request):**

 + **Function**:使用户进入仪表盘

 + **Input**：无

 + **Output**：

   ​			渲染仪表盘内容

### 2.2统计模块

### 1.get_data():

+ **Function:**从数据库中读取数据


  - **Input:**无.

- **Output:**

    ​          **1.df(DataFrame)**:返回数据库中所有记录.



### 	2.count_Salary(df,option):

+ **Function:**返回分组得到的记录


  - **Input:**

    ​		 **1.df(DataFrame):**数据库记录

    ​         **2.option(str)：**前端发来的字段

- **Output:**

  ​		 **1.salary_companyType(DataFrame)**:分组后的记录表


### 3.groupByOneFeature(df,options):

+ **Function:** 根据options标签分组数据库记录，返回分组数量前十的记录
  - **Input:**
    ​		 **1.df(DataFrame):** 数据库记录  
    ​        **2.option(str)：** 前端发来的字段
- **Output:**  
  ​		 **1.labels**:分组的内容  
  **2.values**:组内的数量

### 4.groupByTwoFeatures(df,options):

+ **Function:** 根据option属性列表进行组合,如['exp','salary']，返回组合后数量前五的标签和数量
  - **Input:**

    ​		 **1.df(DataFrame):** 数据库记录

    ​         **2.option(str)：** 前端发来的字段
- **Output:**  
  ​		 **1.labels**:分组的内容  
  **2.values**:组内的数量

### 5.offersInWeek(df):

+ **Function:** 一周内发布招聘信息发送数量
  - **Input:**
    ​		 **1.df(DataFrame):** 数据库记录
- **Output:**  
  ​		 **1.labels** :7天内的日期  
        **2.values** :每天的招聘数  

### 6.companyOrientationDistribution(df):

+ **Function:** 公司发展方向分布,饼状图，无需排大小
  - **Input:**
    ​		 **1.df(DataFrame):** 数据库记录
- **Output:**  
  ​		 **1.labels** :公司发展方向  
        **2.values** :每个方向对应的公司数量

### 7.addressDistribution(df):

+ **Function:** 公司地区分布，保留address“-”前的地区，并且保留发布数量前10的地区，饼状图
  - **Input:**
    ​		 **1.df(DataFrame):** 据库记录
- **Output:**  
  ​		 **1.labels**:发布数量前十的地区名  
        **2.values**:对应的招聘数量

### 8. recommand(request,**kwargs)

+ **Function**:对用户输入的简历进行职业匹配，并返回相关职业的能力词云和Offer招聘详细表格数据

+ **Input**：前端表单提交的用户输入简历字符串或Offer表格页码.

+ **Output**:  
    + 默认输出：
        {'jobinfo_n': jobinfo_n, 'username':username, 'profile':profile}  
        分别为：当前存储数据量、当前用户名和用户简历；
    + 职业匹配输出：  
        {"result": result, "jobinfo": jobinfoDict, "unifyName": unifyName, "offers": offers, "page": page,"total_pages": total_pages, "abilityDict": abilityDict,'username': username}  
        分别为：匹配职业结果、匹配职业Offer信息表信息、职业名、offer数量、offer每页数量、offer页数、词云字典和用户名；
    + Offer表格换页输出：
        {"jobinfo": jobinfoDict, "unifyName": unifyName, "offers": offers, "page": page, "total_pages": total_pages, 'username': username}  
        分别为：匹配职业Offer信息表信息、职业名、offer数量、offer每页数量、offer页数和当前用户名；
    
### 9. sendTableData(unifyName, page)

+ **Function**:对职业名和指定页码，返回该页offer表格信息。

+ **Input**：职业名和需跳转页码

+ **Output**:  
    该页offer表格信息、offer数量和offer页数。

### 10. big_data.AbilityWordCloudNLP.wordCloud.getWordCloudData(unifyName)

+ **Function**:通过unifyName得到数据库最新前50个jobinfo的个人技能，专业技能，工具使用的词频列表

+ **Input**: 职位统一名

+ **Output**:  专业技能词频高->低的词语列表  
label1CountList 专业技能词频高->低的频率列表  
label2WordList 个人技能词频高->低的词语列表  
label2CountList 个人技能词频高->低的频率列表  
label3WordList 工具使用词频高->低的词语列表  
label3CountList 工具使用词频高->低的频率列表  
